# ai-for-web-devs

./: LICENSE  README.md  ollama_mac_gpu_notes.md
projects/1-hello-world/: README.md  docker-compose.yml
projects/1-hello-world/app/: app.py
projects/1-hello-world/app/components/mmcg_chat/: package-lock.json  package.json
projects/1-hello-world/app/services/: llm_client.py
projects/1-hello-world/app/static/components/: mmcg_chat
projects/1-hello-world/app/templates/: index.html  layout.html
projects/1-llm-chat/: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
projects/1-llm-chat/app/: app.py  config.py  requirements.txt
projects/1-llm-chat/app/static/components/: chat
projects/2-llm-rag/: .env.example  README.md  docker-compose.yml
projects/2-llm-rag/app/: app.py  config.py  requirements.txt
projects/2-llm-rag/app/services/: embedding_function.py  llm_client.py  vector_store.py
projects/2-llm-rag/app_infinity/: Dockerfile
projects/3-llm-memory/: .env.example  .gitignore  README.md  docker-compose.yml
projects/3-llm-memory/app/: app.py
projects/3-llm-memory/app/services/: llm_client.py  vector_store.py
projects/4-how-llm-prompts-work/: README.md
projects/4-how-llm-prompts-work/flask/: .env.example  docker-compose.yml
projects/4-how-llm-prompts-work/flask/app/: app.py  config.py  entrypoint.sh  hf_client.py  requirements.txt
projects/4-how-llm-prompts-work/jupyter/: docker-compose.yml
projects/4-how-llm-prompts-work/jupyter/notebooks/: llm-prompt-mechanics.ipynb
projects/5-llm-image-gen/: .gitignore  README.md  docker-compose.yml
projects/5-llm-image-gen/app/: Dockerfile  app.py  config.py  requirements.txt
projects/5-llm-image-gen/app/services/: app_llm.py  chat_manager.py  fs_utils.py  image_gen.py  llm_http_client.py  vector_store.py
projects/5-llm-image-gen/aws/: deploy.sh
projects/6-mixture-of-models/: .env.example  .gitignore  README.md  docker-compose-local.yml  docker-compose.yml
projects/6-mixture-of-models/app/: app.py  config.py  entrypoint.sh  models.py
projects/6-mixture-of-models/app/migrations/versions/: 40f2981ed04c_initial_migration.py
projects/6-mixture-of-models/app/services/: app_llm.py  chat_manager.py  content_store.py  image_gen.py  llm_http_client.py
projects/6-mixture-of-models/app/services/prompts/: diffusion_prompt_from_message.j2  (+1 more)
projects/6-mixture-of-models/aws/: aws.env.example  setup.sh
projects/7-svelte-5/: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
projects/7-svelte-5/app/: Dockerfile  entrypoint.sh  requirements.txt
projects/7-svelte-5/app/app/: __init__.py  __main__.py  config.py  database.py  models.py
projects/7-svelte-5/app/services/: embedding_service.py  response_types.py
projects/7-svelte-5/aws/: .gitignore  aws.env.example  deploy.sh  setup.sh
projects/8-rust/: .gitignore  Cargo.toml  README.md
projects/8-rust/entities/: Cargo.toml
projects/8-rust/entities/src/: chat.rs  chat_message.rs  chats_users.rs  errors.rs  lib.rs  user.rs
projects/8-rust/migration/: Cargo.toml
projects/8-rust/migration/src/: m20220101_000001_create_table.rs
projects/8-rust/src/: main.rs
projects/8-rust/src/app/: mod.rs
projects/8-rust/src/controllers/: chat.rs  errors.rs  mod.rs
projects/8-rust/src/templates/: mod.rs
projects/8-rust/templates/: layout.html.jinja  page.html.jinja
(+46 files in other folders)
