[package]
name = "hello-rust"
readme = "README.md"
authors = ["Matthew Haynes"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = { version = "0.8.1", features = ["json", "tokio"] }
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
