[package]
name = "hello-rust"
readme = "README.md"
authors = ["Matthew Haynes"]
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entities", "migration"]

[workspace.dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["json", "tokio"] }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
sea-orm = { version = "1.1.13", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
] }
sea-orm-migration = { version = "1.1.0", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
sea_orm_utils = { git = "https://github.com/matthewhaynesonline/sea-orm-utils.git", rev = "f1c4322" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

# Local deps
entities = { path = "entities" }
migration = { path = "migration" }
